# charts_app

./: .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  SdbMainWindow.h  VERSION  chartview.h  design-doc.md  docker-compose.yml  main.cpp  qt_cmake.sh
.github/workflows/: build_linux.yml  build_windows.yml  cmake.yml  release.yml
cmake/: install_linux.cmake  install_win32.cmake  post_build_linux.cmake  post_build_win32.cmake
settings/: settings.json
src/: SdbMainWindow.cpp  chartview.cpp  main.cpp  main_window.cpp  main_window.h
src/sdb_settings/: SdbJsonConfig.cpp  SdbJsonConfig.h  SdbSettingsChart.h  SdbSettingsChartWindow.cpp  SdbSettingsChartWindow.h  SdbSettingsChartWindow2D.cpp  SdbSettingsChartWindow2D.h
src/sdb_widgets/: SdbAppControlWidget.cpp  SdbAppControlWidget.h  SdbButton.cpp  SdbButton.h  SdbChart.cpp  SdbChart.h  SdbChartControlPanel.cpp  SdbChartControlPanel.h  SdbChartController.cpp  SdbChartController.h  SdbChartControls.cpp  SdbChartControls.h  SdbChartSettings.cpp  SdbChartSettings.h  SdbChartView.cpp  SdbChartView.h  SdbChartWidget.cpp  SdbChartWidget.h  SdbChartWindowSettings.cpp  SdbChartWindowSettings.h  SdbJsonConfig.cpp  SdbJsonConfig.h  SdbMainWindow.cpp  SdbMainWindow.h  SdbRadioButton.cpp  SdbRadioButton.h  SdbRawChartController.cpp  SdbRawChartController.h  SdbRawChartWidget.cpp  SdbRawChartWidget.h  SdbSettingsChart.cpp  SdbSettingsChartWindow.h  SdbSettingsSeries.cpp  SdbSettingsSeries.h
test/: example_chart.cpp  test_chart.cpp  test_gui.cpp
